# libeasyfc

./: Makefile  README.md  libeasyfc.spec
src/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  libeasyfc-gobject-uninstalled.pc  libeasyfc-gobject-uninstalled.pc.in  libeasyfc-gobject.pc  libeasyfc-gobject.pc.in  libeasyfc-uninstalled.pc  libeasyfc-uninstalled.pc.in  libeasyfc.pc  libeasyfc.pc.in  requires
src/docs/: Makefile.am  Makefile.in  libeasyfc-docs.sgml  libeasyfc-sections.txt
src/docs/html/: annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  libeasyfc-Utilities.html  libeasyfc-ezfc-alias-t.html  libeasyfc-ezfc-config-t.html  libeasyfc-ezfc-error-t.html  libeasyfc-ezfc-font-t.html  libeasyfc.devhelp2  object-tree.html
src/docs/tmpl/: ezfc-alias.sgml  ezfc-config.sgml  ezfc-error.sgml  ezfc-font.sgml  ezfc-utils.sgml
src/libeasyfc/: Makefile.am  Makefile.in  ezfc-alias.c  ezfc-alias.h  ezfc-config.c  ezfc-config.h  ezfc-error.h  ezfc-font-private.h  ezfc-font.c  ezfc-font.h  ezfc-mem.c  ezfc-mem.h  ezfc-utils.h  ezfc.c  ezfc.h
src/libeasyfc-gobject/: Makefile.am  Makefile.in  ezfc-alias.gir.h  ezfc-config.gir.h  ezfc-error.gir.h  ezfc-font.gir.h  ezfc-gobject.c  ezfc-gobject.h  gengir.sh
src/tests/: Makefile.am  Makefile.in  dump.c  ezfc-tool.py  list.c  load.c  save.c
